update demo [ci skip]

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,7 @@
   <script src="../build/web-audio-engine.js"></script>
   <style>
   .btn { width: 100px; outline: none !important }
-  .CodeMirror { font-family: 'Courier new', monospace; border: solid 1px #ddd; height: 800px }
+  .CodeMirror { font-family: 'Courier', monospace; border: solid 1px #ddd; height: 800px }
   #app { margin-top: 15px }
   </style>
 </head>
