update demo [ci skip]

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -223,6 +223,16 @@
       document.getElementById("doesntWork").style.display = "block";
     }
 
+    var hash = location.hash;
+
+    if (hash) {
+      hash = hash.substr(1);
+
+      if (vue.list.indexOf(hash) !== -1) {
+        vue.selected = hash;
+      }
+    }
+
     vue.loadScript();
   });
   </script>
