update demo [ci skip]

--- a/demo/index.html
+++ b/demo/index.html
@@ -211,7 +211,7 @@
         isPlaying: false,
         engine: "web-audio-engine",
         selected: "sines",
-        list: [ "metronome", "sines", "filter", "delay", "chorus", "pan", "drum" ],
+        list: [ "metronome", "sines", "filter", "delay", "chorus", "pan", "iir-filter", "drum" ],
         error: ""
       },
       methods: {
