--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Work+Sans:400,200">
   <script src="//cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.0/es6-shim.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/fetch/1.0.0/fetch.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/setImmediate/1.0.4/setImmediate.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.11.1/lodash.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/platform/1.3.1/platform.min.js"></script>
@@ -20,6 +21,8 @@
     .error-message { color: #a94442; border: none; box-shadow: none }
     .textarea { font-family: 'Courier', monospace }
     #app { margin-top: 15px }
+    #doesntWork { color: #a94442 }
+    canvas { width: 100%; height: 256px }
   </style>
 </head>
 <body>
@@ -32,13 +35,20 @@
     </div>
     <div id="app">
       <div class="form-horizontal">
-        <div class="alert alert-danger" role="alert" style="display: none" id="doesntWork">This benchmark doesn't work in Chrome or Safari, please use Firefox.</div>
         <div class="form-group">
           <label class="col-sm-1 control-label"></label>
           <div class="col-sm-11">
-            <button class="btn" :class="isPlaying ? 'btn-success' : 'btn-default'" v-on:click="run">Run test</button>
+            <button class="btn" :class="isPlaying ? 'btn-success' : 'btn-default'" v-on:click="run">Run</button>
           </div>
         </div>
+
+        <div class="form-group">
+          <label class="col-sm-1 control-label"></label>
+          <div class="col-sm-11">
+            benchmark to render 1 sec audio using OfflineAudioContext
+          </div>
+        </div>
+
         <div class="form-group">
           <label class="col-sm-1 control-label">suite</label>
           <div class="col-sm-11">
@@ -53,6 +63,9 @@
           <div class="col-sm-11 checkbox">
             <label>
               <input type="checkbox" v-model="includeNative"> include the benchmark of the native Web Audio API
+              <span style="display:none" id="doesntWork">
+                ( This benchmark doesn't work in Chrome or Safari, please use Firefox )
+              </span>
             </label>
           </div>
         </div>
@@ -60,14 +73,20 @@
         <div class="form-group">
           <label class="col-sm-1 control-label">code</label>
           <div class="col-sm-11">
-            <textarea rows="15" class="form-control textarea">{{ code }}</textarea>
+            <textarea rows="15" class="form-control textarea" v-model="code"></textarea>
           </div>
         </div>
+
         <div class="form-group">
-          <label class="col-sm-1 control-label">result</label>
+          <label class="col-sm-1 control-label">report</label>
           <div class="col-sm-11">
-            <textarea rows="10" class="form-control textarea">{{ result }}</textarea>
+            <textarea rows="5" class="form-control textarea">{{ report }}</textarea>
           </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-1 control-label"></label>
+          <div class="col-sm-11" id="result"></div>
         </div>
       </div>
     </div>
@@ -75,35 +94,14 @@
   <script>
   window.global = window;
   window.module = { exports: null };
+  window.AudioContext = window.AudioContext || window.webkitAudioContext;
   window.OfflineAudioContext = window.OfflineAudioContext || window.webkitOfflineAudioContext;
   window.addEventListener("DOMContentLoaded", function() {
     "use strict";
 
     var benchmarkList = [ "noop", "simple-sine", "simple-saw", "simple-gain", "sched-param", "sched-sine" ];
-
-    function fetch(url) {
-      return new Promise(function(resolve, reject) {
-        var xhr = new XMLHttpRequest();
-        xhr.open("GET", url);
-        if (/\.(wav|mp3|ogg|aif)$/.test(url)) {
-          xhr.responseType = "arraybuffer";
-        }
-        xhr.onload = function() {
-          if (xhr.readyState === 4) {
-            if (xhr.status === 200) {
-              resolve({
-                text: function() { return xhr.response; },
-                arrayBuffer: function() { return xhr.response; }
-              });
-            } else {
-              reject(new TypeError(xhr.statusText));
-            }
-          }
-        };
-        xhr.onerror = function() { reject(new TypeError(xhr.statusText)); };
-        xhr.send();
-      });
-    }
+    var audioContext = new AudioContext();
+    var sampleRate = audioContext.sampleRate;
 
     function loadScript(name) {
       return fetch("./browser-benchmark/" + name + ".js").then(function(res) {
@@ -115,21 +113,26 @@
       try {
         return eval(source);
       } catch (e) {
-        console.error(e);
+        print(e.toString());
         return null;
       }
     }
 
-    function runInContext(OfflineAudioContext, func, done) {
-      var context = new OfflineAudioContext(2, 44100, 44100);
+    function print(line) {
+      vue.report += line + "\n";
+      console.log(line);
+    }
+
+    function render(wae, func, done) {
+      var context = new wae.OfflineAudioContext(2, sampleRate, sampleRate);
 
       // for web-audio-engine
       context._renderingIterations = Infinity;
 
       func(context);
 
-      context.oncomplete = function() {
-        done();
+      context.oncomplete = function(e) {
+        done(e.renderedBuffer);
       };
 
       context.startRendering();
@@ -137,56 +140,122 @@
 
     function benchmark(func, includeNative, done) {
       var suite = new Benchmark.Suite();
+      var duration = 1.0;
+      var renderedBuffer1 = null;
+      var renderedBuffer2 = null;
 
       suite.add("web-audio-engine", function(deferred) {
-        runInContext(WebAudioEngine.OfflineAudioContext, func, function() {
+        render(WebAudioEngine, func, function(audioBuffer) {
+          renderedBuffer1 = audioBuffer;
           deferred.resolve();
         });
       }, { defer: true });
 
       if (includeNative) {
         suite.add("native Web Audio", function(deferred) {
-          runInContext(OfflineAudioContext, func, function() {
+          render(window, func, function(audioBuffer) {
+            renderedBuffer2 = audioBuffer;
             deferred.resolve();
           });
         }, { defer: true });
       }
 
       suite.on("cycle", function(event) {
-        var line = "" + event.target;
-
-        vue.result += line + "\n";
-        console.log(line);
+        print("" + event.target);
       });
 
       suite.on("error", function(e) {
-        console.error(e);
+        print(e.toString());
       });
 
       suite.on("complete", function() {
-        var line = "Fastest is " + this.filter("fastest").map("name");
-
-        vue.result += line + "\n";
-        console.log(line);
-
-        done(suite);
+        print("Fastest is " + this.filter("fastest").map("name"));
+        done([ renderedBuffer1, renderedBuffer2 ]);
       });
 
       suite.run({ async: true });
-
-      return suite;
     }
 
-    function run(code, includeNative, done) {
-      var func = compile(code);
+    function buildResult(result) {
+      var $result = document.getElementById("result");
 
-      if (typeof func !== "function") {
-        return done();
+      $result.innerHTML = "";
+
+      result.forEach(function(audioBuffer, index) {
+        if (!audioBuffer) { return }
+
+        var canvas = document.createElement("canvas");
+
+        canvas.width = 1024;
+        canvas.height = 256;
+        canvas.style.background = "#2c3e50";
+
+        $result.appendChild(canvas);
+
+        var context = canvas.getContext("2d");
+
+        for (var ch = 0; ch < 2; ch++) {
+          var data = audioBuffer.getChannelData(ch);
+
+          context.strokeStyle = "#27ae60";
+          context.lineWidth = 0.1;
+          context.beginPath();
+
+          for (var i = 0, imax = data.length; i < imax; i++) {
+            var x = linlin(i, 0, imax, 0, 1024);
+            var y = linlin(data[i], +1, -1, 128 * ch, 128 * ch + 128);
+
+            context.lineTo(x, y);
+          }
+
+          context.stroke();
+        }
+
+        context.fillStyle = "#fff";
+        context.fillText([ "wae", "native" ][index], 4, 10);
+
+        context.lineWidth = 1;
+        context.strokeStyle = "#fff";
+        context.beginPath();
+        context.moveTo(0, 128.5);
+        context.lineTo(1024, 128.5);
+        context.stroke();
+
+        canvas.addEventListener("click", function() {
+          play(audioBuffer);
+        });
+      });
+    }
+
+    function play(audioBuffer) {
+      var t0 = audioContext.currentTime;
+      var t1 = t0 + audioBuffer.duration;
+      var bufSrc = audioContext.createBufferSource();
+
+      bufSrc.buffer = toNativeAudioBuffer(audioBuffer);
+      bufSrc.start(t0);
+      bufSrc.stop(t1);
+      bufSrc.connect(audioContext.destination);
+      bufSrc.onended = function() {
+        bufSrc.disconnect();
+      };
+    }
+
+    function toNativeAudioBuffer(audioBuffer) {
+      if (audioBuffer instanceof AudioBuffer) {
+        return audioBuffer;
+      }
+      var buffer = audioContext.createBuffer(audioBuffer.numberOfChannels, audioBuffer.length, audioBuffer.sampleRate);
+
+      for (var ch = 0; ch < buffer.numberOfChannels; ch++) {
+        buffer.getChannelData(ch).set(audioBuffer.getChannelData(ch));
       }
 
-      benchmark(func, includeNative, function(suite) {
-        done();
-      });
+      return buffer;
+    }
+
+    function linlin(value, inMin, inMax, outMin, outMax) {
+      return (value - inMin) / (inMax - inMin) * (outMax - outMin) + outMin;
     }
 
     var vue = new Vue({
@@ -197,26 +266,37 @@
         selected: "noop",
         list: benchmarkList,
         code: "",
-        result: ""
+        report: ""
       },
       methods: {
         run: function() {
-          var _this = this;
           if (this.isPlaying) {
             return;
           }
+          var _this = this;
+          var func = compile(this.code);
+
+          if (typeof func !== "function") {
+            return;
+          }
+
           this.isPlaying = true;
-          this.result = navigator.userAgent + "\n";
-          run(this.code, this.includeNative, function() {
+          this.report = "";
+          document.getElementById("result").innerHTML = "";
+
+          print(navigator.userAgent);
+
+          benchmark(func, this.includeNative, function(result) {
+            buildResult(result);
             _this.isPlaying = false;
           });
         },
         loadScript: function() {
           var _this = this;
-          loadScript(this.selected).then(function(source) {
-            _this.code = source;
+          loadScript(this.selected).then(function(code) {
+            _this.code = code;
           }).catch(function(e) {
-            console.error(e);
+            print(e.toString());
           });
         }
       }
