update benchmark report on subsequent runs

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -80,7 +80,7 @@
         <div class="form-group">
           <label class="col-sm-1 control-label">report</label>
           <div class="col-sm-11">
-            <textarea rows="5" class="form-control textarea">{{ report }}</textarea>
+            <textarea rows="5" class="form-control textarea" v-model="report"></textarea>
           </div>
         </div>
 
